--- a/src/main.css
+++ b/src/main.css
@@ -1,12 +1,51 @@
 body {
-  font-family: 'Poppins', sans-serif;
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  overflow: hidden;
+	font-family: "Poppins", sans-serif;
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+	overflow: hidden;
 }
 
 :root {
-  --dark: #0e0e0e;
-  --light: #e8e5e5;
+	--dark: #0e0e0e;
+	--light: #e8e5e5;
+	--text-dark: #000000;
+	--text-soft-dark: #676767;
+	--text-light: #f4f4f4;
+	--text-soft-light: #929292;
+}
+
+.header-container {
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	margin: 20px 30px;
+	/* margin-top: 50%; */
+}
+
+.homeScreen-container {
+}
+
+.homeScreen-text {
+	color: var(--text-soft-dark);
+	font-size: 1.3rem;
+	font-weight: 500;
+}
+
+.homeScreen-title {
+	color: var(--text-dark);
+	font-size: 1.4em;
+	font-weight: 500;
+}
+
+
+.card-header {
+  color: var(--text-soft-light);
+  font-weight: 500;
+  font-size: 1.5rem;
+}
+
+.card-text {
+  color: var(--text-light);
+  font-size: .9rem;
 }
