--- a/src/main.css
+++ b/src/main.css
@@ -19,14 +19,17 @@ body {
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
+	margin-top: 10%;
+}
+
+.container {
 	margin: 20px 30px;
-	/* margin-top: 50%; */
 }
 
 .homeScreen-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: space-between;
+	display: flex;
+	/* align-items: center; */
+	flex-direction: column;
 }
 
 .homeScreen-text {
@@ -41,19 +44,45 @@ body {
 	font-weight: 500;
 }
 
-
 .card-header {
-  color: var(--text-soft-light);
-  font-weight: 500;
-  font-size: 1.5rem;
+	color: var(--text-soft-light);
+	font-weight: 500;
+	font-size: 1.5rem;
 }
 
 .card-text {
-  color: var(--text-light);
-  font-size: .9rem;
+	color: var(--text-light);
+	font-size: 0.9rem;
+}
+
+.card-container {
+	margin-top: -10px;
+}
+
+.section-container {
+  position: relative;
+  width: 50%;
 }
 
 
-.card-container {
-  margin-top: -10px;
+
+.img {
+	display: block;
+	width: 100%;
+	/* works like background-size: cover; but for img tags */
+	object-fit: cover;
+}
+
+.img-overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	background-color: #00000030;
+}
+
+.section-title {
+	position: absolute;
+	top: 10px;
 }
