--- a/src/main.css
+++ b/src/main.css
@@ -3,11 +3,14 @@ body {
 	margin: 0;
 	padding: 0;
 	box-sizing: border-box;
-	overflow: hidden;
+  overflow: hidden;
+  background-color: var(--bg-dark);
+  color: var(--text-light)
 }
 
 :root {
-	--dark: #0e0e0e;
+  --dark: #0e0e0e;
+  --bg-dark: #1e1e1e;
 	--light: #e8e5e5;
 	--text-dark: #000000;
 	--text-soft-dark: #676767;
@@ -16,14 +19,37 @@ body {
 }
 
 .header-container {
-	display: flex;
+  display: flex;
+  flex-direction: column;
 	align-items: center;
 	justify-content: space-between;
-	margin-top: 10%;
+  margin-top: 10%;
+  height: 90vh;
+}
+
+.header-container .title {
+  font-size: 3rem;
+  font-weight: 500;
+}
+
+
+.header-container .top {
+  height: 70vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.header-container .h-line {
+  margin: 20px 0px;
+  width: 40vw;
+  background-color: var(--text-soft-light);
+  height: 2px;
 }
 
 .container {
-	margin: 20px 30px;
+	margin: 20px 40px;
 }
 
 .homeScreen-container {
@@ -61,14 +87,19 @@ body {
 
 .section-container {
   position: relative;
-  width: 50%;
+  width: 100%;
+  height: 70vh;
+  margin: 10px 0px;
+  padding: 0px 10px;
 }
 
 
 
 .img {
 	display: block;
-	width: 100%;
+  width: calc(100% - 20px) ;
+  height: 100%;
+  border-radius: 20px;
 	/* works like background-size: cover; but for img tags */
 	object-fit: cover;
 }
@@ -76,13 +107,43 @@ body {
 .img-overlay {
 	position: absolute;
 	top: 0;
-	left: 0;
+	left: 50%;
 	bottom: 0;
-	right: 0;
+  right: 30px;
+  border-radius: 0px 20px 20px 0px;
 	background-color: #00000030;
 }
 
-.section-title {
+.section-wrapper {
 	position: absolute;
-	top: 10px;
+  top: 10px;
+  left: 53%;
+  right: 10px;
 }
+
+
+@media (max-width: 420px) {
+
+  .header-container .title {
+    font-size: 2rem;
+  }
+
+  /* .img-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 30px;
+    border-radius: 0px 20px 20px 0px;
+    background-color: #00000030;
+  }
+
+  .section-wrapper {
+    position: absolute;
+    top: 10px;
+    left: 10px;
+    right: 20px;
+    padding: 20px;
+  } */
+}
+
